# sebutils

./: .pre-commit-config.yaml  Cargo.toml  README.md  justfile
src/: devenver.rs  dstroy.rs  rcat.rs  rename_enum.rs  rename_regex.rs  search.rs
test_dir/: sda  sdae.txt
