[package]
name = "sebutils"
version = "0.1.4"
edition = "2021"

# Default binary
[dependencies]
regex = "1"
clap = { version = "4.1", features = ["derive"] }
tempfile = "3.6"
walkdir = "2"

[[bin]]
name = "search"
path = "src/search.rs"

[[bin]]
name = "rcat"
path = "src/rcat.rs"

[[bin]]
name = "rename-enum"
path = "src/rename_enum.rs"

[[bin]]
name = "rename-regex"
path = "src/rename_regex.rs"
